@@ -5,6 +5,7 @@ ver 0.18 (2012/??/??)
 * protocol:
   - new command "readcomments" lists arbitrary file tags
   - new command "toggleoutput"
+  - new commands "findin", "searchin" with base URI
   - search for album artist falls back to the artist tag
   - re-add the "volume" command
 * input:
